# libdweetAgent

./: CMakeLists.txt  README.md
Examples/: CMakeLists.txt  dweetReader.cpp  dweetWriter.cpp
include/: cJSON.h  dweet.h  dweetApi.hpp
src/: CMakeLists.txt  dweet.c  dweetApi.cpp
